--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,10 @@
 .App {
   text-align: center;
+  margin: 50px;
+  border: 2px solid black;
+  padding: 5% 30%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
